# woc_chinese_chess

./: .gitignore  README.md
.github/workflows/: build.yml
server/: Dockerfile  main.php  response.php
src/: CMakeLists.txt  Chinese_Chess.pro  algorithms.cpp  algorithms.h  bing_zu_piece.cpp  bing_zu_piece.h  board.cpp  board.h  cell.cpp  cell.h  dialogui.cpp  jiang_shuai_piece.cpp  jiang_shuai_piece.h  ju_piece.cpp  ju_piece.h  loginui.cpp  ma_piece.cpp  ma_piece.h  mainui.cpp  mainui.h  network.cpp  network.h  network.json  pao_piece.cpp  pao_piece.h  piece.cpp  piece.h  shi_piece.cpp  shi_piece.h  xiang_piece.cpp  xiang_piece.h
